--- a/style.css
+++ b/style.css
@@ -20,8 +20,12 @@ button {
   transform: scale(1.3);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
+button:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(1px);
+}
 .results {
   display: flex;
   flex-direction: column;
@@ -37,6 +41,7 @@ button {
   color: white;
   background-color: gray;
   padding-bottom: 36px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .score-container,
